= RubyMotion 2.39 =

  * [iOS] Create a `UIViewController`, `UINavigationController`, and `UIWindow`
    in the default new application template.
  * [iOS] Enabled arm64 support by default for iOS projects. 
  * [iOS] Honour explicit `device_name` or `target` specified by user.
    Specifying both is disallowed, because a device is configured for a
    specific SDK.
  * [iOS] Fixed a regression where Extension and Frameworks could not build for
    iOS device.
  * [iOS] Fixed a bug where `rake spec' would return 0 as exit code even if it
    will fail with crash.
  * [iOS] Fixed a bug where #tap and #rotate_device cause a crash when it run
    `rake spec' with x86_64.
  * [iOS] Fixed a bug where all rake task could not be ran in root directory of
    Extension/Framework. So, CocoaPods libraries cannot be installed.
  * [iOS] Fixed a bug where the shared framework was not built with 64-bit.
  * [iOS] Fixed a bug where it could not customize Action and Share extension's
    icon. Added `app.icons' property which it can use in extension's Rakefile.
  * [iOS] Added launch images for iPhone 6 and iPhone 6 Plus. Thanks to
    Hwee-Boon Yar for the patch (pull request #170).
  * Fixed a regression where it would cause a link error in Xcode project when
    it uses a static library which it was generated by `rake static'.
  * Fixed a bug where wrong Boxed object will be returned from Objective-C method.
  * Fixed the `motion support' command invocation to print both the stable and
    pre-release versions of RubyMotion.
  * Fixed a bug which it would triggered "Symbol not found" when it will use a
    constant which is not contained in older SDK.
  * Fixed a bug which it would not solve framework dependencies in embedded
    frameworks.

= RubyMotion 2.38 =

  * Optimized the app executable size when a project has too many Ruby source
    files, by removing unnecessary internal code. ~30-60% lighter.